finish html project

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
           <a href="personagens.html">Personagens</a>
         </li>
         <li id="episodios-nav">
-          <a href="episodios.html">Episódios</a>
+          <a href="https://www.crunchyroll.com/pt-br/series/GYQ4MW246/naruto-shippuden">Episódios</a>
         </li>
-        <li id="localizacoes-nav">
-          <a href="localizacoes.html">Localizações</a>
+        <li id="portifolio-nav">
+          <a href="portifolio.html">Portifólio</a>
         </li>
       </ul>
     </header>
